# air-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  air_platform_demo.tape  collector.yaml  compare.html  dashboard.html  demo.html  demo_gif.py  docker-compose.yml  hosted-demo.html  pyproject.toml  requirements.txt  test_production.py
.github/workflows/: ci.yml
docs/: eu-ai-act-compliance.md  test-results-all-repos.md
tests/: conftest.py  test_audit_flow.py  test_e2e_stack.py  test_end_to_end.py  test_episode_flow.py  test_health.py  test_policy_flow.py
