[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-platform"
version = "0.2.0"
description = "AIR Platform integration tests and orchestration"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
